--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id='container'>
         <div id='title'>
-            <h1>How Much do You Know About Texas?</h1>
+            <h1>How Much Do You Know About Texas?</h1>
         </div>
         <br/>
         <div id='quiz'></div>
