--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class='button' id='prev'><a href='#'>Prev</a></div>
         <div class='button' id='start'> <a href='#'>Start Over</a></div>
     </div>
+    <div id= 'music'>
+        <audio loop="loop" autoplay="autoplay" controls="controls">  
+            <source src="sound/Deep-In-The-Heart.mp3" />    
+        </audio> 
+    </div>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="js/app.js"></script>
 </body>
