Texas shape added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Texas Quiz</title>
 </head>
 <body>
+    <div id= 'flag'>
+        <h1>Texas</h1>
+    </div>
     <div id='container'>
         <div id='title'>
             <h1>How Much Do You Know About Texas?</h1>
