--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <title>Texas Quiz</title>
-</head>
-<body>
-    <div id= 'flag'>
-        <h1>Texas</h1>
-    </div>
-    <div id='container'>
-        <div id='title'>
-            <h1>How Much Do You Know About Texas?</h1>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <title>Texas Quiz</title>
+    </head>
+    <body>
+        <div id='flag'></div>
+        <div id='container'>
+            <h1 id='title'>How Much Do You Know About Texas?</h1>
+            <div id='quiz'></div>
+            <div class='button' id='next'><a href='#'>Next</a></div>
+            <div class='button' id='prev'><a href='#'>Prev</a></div>
+            <div class='button' id='start'><a href='#'>Start Over</a></div>
         </div>
-        <br/>
-        <div id='quiz'></div>
-        <div class='button' id='next'><a href='#'>Next</a></div>
-        <div class='button' id='prev'><a href='#'>Prev</a></div>
-        <div class='button' id='start'> <a href='#'>Start Over</a></div>
-    </div>
-    <div id= 'music'>
-        <audio loop="loop" autoplay="autoplay" controls="controls">  
-            <source src="sound/Deep-In-The-Heart.mp3" />    
-        </audio> 
-    </div>
-    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-    <script src="js/app.js"></script>
-</body>
+        <div id='music'>
+            <audio loop="loop" autoplay="autoplay" controls="controls">  
+                <source src="sound/Deep-In-The-Heart.mp3" />    
+            </audio> 
+        </div>
+    </body>
 </html>
